# WhisperServer

./: .env.example  .gitignore  DEVELOPMENT.md  OPENAI_INTEGRATION.md  QUICKSTART.md  README.md  ReadMe.md  main.py  metrics.py  model_registry.py  parakeet_backend.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  telegram_bot.py  vad_backend.py
client/: transcriber.py
deploy/: whisperserver.service
docs/: api.md  architecture.md  article-context.md  client.md  configuration.md  development.md  quickstart.md  realtime-5.6sol-brief.md  security.md
templates/: webui.html
tests/: __init__.py  example_openai_usage.py  test_blackbox_audio.py  test_cache_control.py  test_model_registry.py  test_model_substitution.py  test_openai_endpoint_simple.py  test_openai_transcription.py  test_openai_v1_streaming.py  test_parakeet_backend.py  test_vad_filter.py
whisperclient/: __init__.py  requirements.txt  transcriber.py  whisper_cli.py
