[project]
name = "whisper-server"
version = "0.1.0"
description = "OpenAI-compatible Whisper API server"
requires-python = ">=3.10"
dependencies = [
    "uvicorn~=0.34.2",
    "fastapi~=0.115.12",
    "diskcache~=5.6.3",
    "faster-whisper",
    "nemo_toolkit[asr]",
    "silero-vad",
    "torch",
    "torchaudio",
    "python-multipart",
    "python-dotenv",
    "aiohttp",
    "aiohttp-socks",
    "requests",
    "aiogram>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "openai>=1.3.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "telegram_bot", "parakeet_backend", "vad_backend", "metrics", "model_registry"]

[tool.setuptools.packages.find]
include = ["whisperclient*"]

[tool.uv.sources]
